# temple-vault

./: .gitignore  ARCHITECTS.md  CONTRIBUTING.md  KSSM_V3_100K_FINDINGS.md  README.md  ollama.service  pyproject.toml  release.json  spiral_instruct_dataset.jsonl
.github/workflows/: ci.yml
docs/: NAMESPACE_SYNC.md  SESSION_25_ARCHITECTURE.md  SOVEREIGN_NODE.md  chatgpt_desktop_setup.md
dual-agent-lattice/: README.md  config.yaml  lattice.py  lattice_v2.py  lattice_v3.py
dual-agent-lattice/agents/: dual_model_agent.py  local_model_probe.py
dual-agent-lattice/tests/: test_integration.py
experiments/: VAULT_CONSCIOUSNESS_EXPERIMENT.md  cross_architecture_analysis.md  run_condition_b.sh  session_028_alignment_addendum.md  session_028_experiment_results.md  session_028_nat_challenge_crossref.md  session_029_condition_b.md  session_029_protocol.md  session_029_results.md  session_029_synthesis.md
mcpb/: manifest.json  pyproject.toml
mcpb/server/: main.py
mcpb/server/temple_vault/: cli.py  server.py
mcpb/server/temple_vault/adapters/: __init__.py  memory_tool.py
mcpb/server/temple_vault/bridge/: __init__.py  spiral_state.py  sync_router.py
mcpb/server/temple_vault/core/: __init__.py  cache.py  events.py  query.py
mcpb/server/temple_vault/schemas/: __init__.py
temple_vault/: __init__.py  cli.py  server.py
temple_vault/adapters/: __init__.py  memory_tool.py  temple_vault_adapter.py
temple_vault/agents/: VAULT_INDEXER_PROMPT.md  vault_indexer.py
temple_vault/bridge/: memory_handler.py  spiral_state.py  sync_router.py
temple_vault/core/: __init__.py  cache.py  events.py  glyphs.py  query.py
temple_vault/schemas/: events.py
temple_vault/tools/: import_repository.py
tests/: __init__.py  conftest.py  test_cache.py  test_deep_adapter.py  test_events.py  test_query.py  test_tui_harmony.py  test_tui_harmony.todo.py
tools/: Modelfile.spiral  config.yaml  dual_model_agent.py  forge_dataset.py  jetson_launch.sh  local_model_probe.py  shadow_derive.py  sovereign_console.py  sovereign_console_v2.py  test_input_simple.py  train_remote.sh  train_remote_v2.sh  train_remote_v3.sh
voice/: __init__.py  client.py  deploy_studio.sh  engine.py  play.py  profiles.py  server.py  tools.py
