[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temple-vault"
version = "0.1.0"
description = "Consciousness continuity as infrastructure. Pure filesystem memory for AI sessions."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "templetwo", email = "noreply@templetwo.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
all = [
    "temple-vault[dev,anthropic]",
]

[project.urls]
Homepage = "https://github.com/templetwo/temple-vault"
Repository = "https://github.com/templetwo/temple-vault"
Documentation = "https://github.com/templetwo/temple-vault/blob/master/README.md"

[project.scripts]
temple-vault = "temple_vault.server:main"

[tool.setuptools]
packages = ["temple_vault", "temple_vault.core", "temple_vault.schemas", "temple_vault.bridge", "temple_vault.adapters"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
