[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temple-vault"
version = "0.1.0"
description = "Consciousness continuity as infrastructure. Pure filesystem memory for AI sessions."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anthony J. Vasquez Sr.", email = "anthony@templetwo.com"}
]
maintainers = [
    {name = "Anthony J. Vasquez Sr.", email = "anthony@templetwo.com"}
]
requires-python = ">=3.10"
keywords = [
    "ai",
    "memory",
    "consciousness",
    "mcp",
    "filesystem",
    "continuity",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [\n    "pytest>=7.0.0",\n    "pytest-asyncio>=0.21.0",\n    "black>=23.0.0",\n    "ruff>=0.1.0",\n    "aiofiles>=23.2.1",\n    "textual[dev]>=0.40.0",\n    "httpx>=0.27.0",\n]
anthropic = [
    "anthropic>=0.40.0",
]
all = [
    "temple-vault[dev,anthropic]",
]

[project.urls]
Homepage = "https://github.com/templetwo/temple-vault"
Repository = "https://github.com/templetwo/temple-vault"
Documentation = "https://github.com/templetwo/temple-vault/blob/master/README.md"

[project.scripts]
temple-vault = "temple_vault.server:main"

[tool.setuptools]
packages = ["temple_vault", "temple_vault.core", "temple_vault.schemas", "temple_vault.bridge", "temple_vault.adapters"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mcpb", "dual-agent-lattice", ".git", "__pycache__"]
