[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temple-vault"
version = "0.1.0"
description = "Consciousness continuity as infrastructure. Pure filesystem memory for AI sessions."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anthony J. Vasquez Sr.", email = "anthony@templetwo.com"}
]
maintainers = [
    {name = "Anthony J. Vasquez Sr.", email = "anthony@templetwo.com"}
]
requires-python = ">=3.10"
keywords = [
    "ai",
    "memory",
    "consciousness",
    "mcp",
    "filesystem",
    "continuity",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "aiofiles>=23.2.1",
    "textual[dev]>=0.40.0",
    "httpx>=0.27.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
all = [
    "temple-vault[dev,anthropic]",
]

[project.urls]
Homepage = "https://github.com/templetwo/temple-vault"
Repository = "https://github.com/templetwo/temple-vault"
Documentation = "https://github.com/templetwo/temple-vault/blob/master/README.md"

[project.scripts]
temple-vault = "temple_vault.server:main"

[tool.setuptools]
packages = ["temple_vault", "temple_vault.core", "temple_vault.schemas", "temple_vault.bridge", "temple_vault.adapters"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F"]  # Core errors and failures only; add "I" for imports incrementally
ignore = ["E501", "F401", "F541", "F841"]  # Fix incrementally

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Allow Any returns for now
warn_unused_ignores = false
warn_redundant_casts = false
no_implicit_optional = false
ignore_missing_imports = true
disallow_untyped_defs = false
show_error_codes = true
disable_error_code = [
    "var-annotated",  # Type annotations on vars
    "attr-defined",  # Object has no attribute
    "operator",  # Unsupported operand types
    "call-overload",  # List overload issues
    "no-any-return",  # Returning Any from typed function
    "assignment",  # Incompatible assignment
    "misc",  # Cannot assign to type
    "no-redef",  # Name already defined
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mcpb", "dual-agent-lattice", ".git", "__pycache__"]
